<resources>
    <string name="app_name">EventendorPartner</string>
    <string name="cutomer_leads">My Customer Leads</string>
    <string name="edit_profile">Edit Profile Detalis</string>
    <string name="reviews">Reviews</string>
    <string name="New">New</string>
    <string name="accepted">Accepted</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="city">City</string>
    <string name="name">Name</string>
    <string name="guest">Guests</string>
    <string name="date">Date</string>
    <string name="basic_details">Basic Details</string>
    <string name="services_prising">Services-Pricing</string>
    <string name="photos_videos">Photos-Videos</string>
    <string name="positive_reviews">Positive</string>
    <string name="negative_reviews">Negative</string>
    <string name="settings">Settings</string>
    <string name="rate">Rate the App</string>
    <string name="other_text">Other</string>
    <string name="longPhotographytext">This introduction to photography is written for beginners, with several tips and suggestions to take your skills as far as possible. However, writing an introduction to photography is like writing an introduction to words; </string>
    <string name="longAbotStudio">A dedicated group of professionals, armed with an aspiration and over one year of first-hand experience teamed up to be identified as a part of a ABOT STUDIO. ABOT STUDIO  is a rapidly developing video production house which caters to all the requirements of the industry. Be it the creation of visual effects or a commercial ad, we are your complete advertising film production studio.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
